# clean-flash-browser-extension

./: .gitignore  Cargo.toml  PLAN.md  README.md  extension.crt
.github/workflows/: build.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  flash_audio.c  ipc_socket.c  shared_memory.c
android/app/src/main/java/org/cleanflash/android/: ContainerManager.kt  FlashPlayerActivity.kt  MainActivity.kt  SettingsActivity.kt
android/app/src/main/java/org/cleanflash/android/audio/: AudioOutputBridge.kt
android/app/src/main/java/org/cleanflash/android/bridges/: ClipboardBridge.kt  ContextMenuBridge.kt  CookieStore.kt  DialogBridge.kt  HttpProxy.kt
android/app/src/main/java/org/cleanflash/android/container/: EnvironmentSetup.kt  ProcessLauncher.kt  TarExtractor.kt
android/app/src/main/java/org/cleanflash/android/input/: TouchHandler.kt
android/app/src/main/java/org/cleanflash/android/ipc/: IpcServer.kt  MessageCodec.kt  SharedMemory.kt
android/app/src/main/java/org/cleanflash/android/rendering/: FlashRenderer.kt
android/app/src/main/res/layout/: activity_main.xml  activity_player.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/build-rootfs/: Dockerfile  README.md  build.sh  zig-aarch64-toolchain.cmake
crates/audio-cpal/: Cargo.toml
crates/audio-cpal/src/: audio_thread.rs  lib.rs
crates/file-chooser-rfd/: Cargo.toml
crates/file-chooser-rfd/src/: lib.rs
crates/gl-glow/: Cargo.toml
crates/gl-glow/src/: lib.rs
crates/http-reqwest/: Cargo.toml
crates/http-reqwest/src/: lib.rs
crates/player-android/: Cargo.toml
crates/player-android/src/: android_audio.rs  android_audio_input.rs  android_clipboard.rs  android_context_menu.rs  android_cookie.rs  android_dialog.rs  android_file_chooser.rs  android_fullscreen.rs  android_http.rs  android_settings.rs  android_url.rs  android_video_capture.rs  frame_shm.rs  ipc_transport.rs  main.rs  protocol.rs
crates/player-core/: Cargo.toml
crates/player-core/src/: lib.rs  native_video_capture.rs
crates/player-egui/: Cargo.toml
crates/player-egui/src/: app.rs  dialogs.rs  main.rs
crates/player-ui-traits/: Cargo.toml
crates/player-ui-traits/src/: lib.rs  qoi.rs  rfd_file_chooser.rs
crates/player-web/: Cargo.toml
crates/player-web/src/: http_fetch.rs  main.rs  protocol.rs  qoi_encode.rs  script_bridge.rs
crates/player-win32/: Cargo.toml
crates/player-win32/src/: app.rs  dialogs.rs  main.rs
crates/ppapi-host/: Cargo.toml
crates/ppapi-host/src/: audio_cpal.rs  audio_input_cpal.rs  audio_thread.rs  browser_object.rs  callback.rs  clipboard_arboard.rs  filesystem.rs  font_rasterizer.rs  gl_context.rs  http_reqwest.rs  http_stub.rs  instance.rs  interface_registry.rs  lib.rs  message_loop.rs  plugin_loader.rs  resource.rs  sandbox.rs  threading.rs  var.rs  window_object.rs
crates/ppapi-host/src/interfaces/: audio.rs  audio_config.rs  audio_input.rs  audio_output.rs  broker.rs  browser_font.rs  buffer.rs  char_set.rs  core.rs  crypto.rs  cursor_control.rs  device_ref.rs  file_chooser.rs  file_ref.rs  flash.rs  flash_clipboard.rs  flash_drm.rs  flash_file.rs  flash_file_fileref.rs  flash_font_file.rs  flash_fullscreen.rs  flash_menu.rs  flash_message_loop.rs  flash_print.rs  graphics2d.rs  graphics3d.rs  image_data.rs  ime_input_event.rs  input_event.rs  instance.rs  instance_private.rs  memory.rs  message_loop.rs  mod.rs  net_address.rs  network_monitor.rs  opengles2.rs  opengles2_stubs.rs  pdf.rs  printing.rs  (+12 more)
crates/ppapi-sys/: Cargo.toml
crates/ppapi-sys/src/: lib.rs
crates/tls-rustls/: Cargo.toml
crates/tls-rustls/src/: lib.rs
test/: CursorLockTests.as  CursorLockTests.swf  FileChooserTests.as  FileChooserTests.swf  FullscreenTests.as  FullscreenTests.swf  Hello.as  Hello.swf  LoadableChild.as  LoadableChild.swf  Stage3DTests.as  Stage3DTests.swf  URLLoaderTests.as  URLLoaderTests.swf  URLRewriteTests.as  URLRewriteTests.swf  build_and_run.sh  cursorlock.html  filechooser.html  fullscreen.html  index.html  servers.py  stage3d.html  test.html  teststick.html  urlrewrite.html
web-extension/: README.md  background.js  content.js  install-host.py  install-host.sh  lz4.js  manifest.json  page-script.js  qoiopt.wasm  settings.css  settings.html  settings.js
web-extension/native-messaging-hosts/: org.cleanflash.flash_player.chrome.json  org.cleanflash.flash_player.firefox.json  org.nickvision.flash_player.chrome.json  org.nickvision.flash_player.firefox.json
