[workspace]
members = [
    "crates/ppapi-sys",
    "crates/ppapi-host",
    "crates/player-core",
    "crates/player-ui-traits",
    "crates/player-egui",
    "crates/player-win32",
    "crates/player-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
ppapi-sys = { path = "crates/ppapi-sys" }
ppapi-host = { path = "crates/ppapi-host", default-features = false }
player-core = { path = "crates/player-core", default-features = false }
player-ui-traits = { path = "crates/player-ui-traits" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "charset", "http2", "rustls"] }

[profile.release]
debug = true

[profile."release-lto"]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
debug = false

[patch.crates-io]
rustls-platform-verifier = { git = 'https://github.com/darktohka/rustls-platform-verifier' }