[package]
name = "audio-cpal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "cpal-based audio output and input providers for the Flash player"

[dependencies]
player-ui-traits = { path = "../player-ui-traits" }
tracing = { workspace = true }
cpal = { git = "https://github.com/RustAudio/cpal" }
parking_lot = "0.12"
