[package]
name = "gl-glow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "glow/glutin-based offscreen OpenGL ES 2.0 context for the Flash player"

[dependencies]
ppapi-sys = { workspace = true }
tracing = { workspace = true }
glow = "0.17"
glutin = "0.32"
raw-window-handle = "0.6"

[target.'cfg(unix)'.dependencies]
wayland-client = { version = "0.31", default-features = false, features = ["system", "dlopen"] }
wayland-backend = { version = "0.3", default-features = false, features = ["client_system", "rwh_06", "dlopen"] }
