[package]
name = "http-reqwest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "reqwest-based HttpRequestProvider for PPAPI host"

[dependencies]
player-ui-traits = { path = "../player-ui-traits" }
ppapi-sys = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
rustls = "0.23"
webpki-roots = "1.0.6"
