[package]
name = "player-android"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Android Flash player host – IPC-backed PPAPI host binary for ARM64"

[[bin]]
name = "flash-host"
path = "src/main.rs"

[dependencies]
player-core = { workspace = true }
player-ui-traits = { workspace = true }
ppapi-host = { workspace = true, features = ["fs-os"] }
ppapi-sys = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
