[package]
name = "player-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core Flash player logic — SWF loading, instance lifecycle"

[dependencies]
ppapi-sys = { workspace = true }
ppapi-host = { workspace = true }
player-ui-traits = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"
