[package]
name = "player-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core Flash player logic - SWF loading, instance lifecycle"

[features]
default = []

[dependencies]
ppapi-sys = { workspace = true }
ppapi-host = { workspace = true, features = ["fs-os"] }
player-ui-traits = { workspace = true }
tracing = { workspace = true }
parking_lot = "0.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_LibraryLoader"] }
