[package]
name = "player-egui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "egui/eframe frontend for the Flash player"

[dependencies]
player-core = { workspace = true }
player-ui-traits = { workspace = true }
ppapi-host = { workspace = true }
ppapi-sys = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
parking_lot = "0.12"
