[package]
name = "player-win32"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Win32 native frontend for the Flash player"

[[bin]]
name = "player-win32"
path = "src/main.rs"

[dependencies]
player-core = { workspace = true, features = ["url-reqwest"] }
player-ui-traits = { workspace = true }
ppapi-host = { workspace = true, features = ["fs-os", "audio-cpal", "clipboard-arboard"] }
ppapi-sys = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
native-windows-gui = "1.0"
native-windows-derive = "1.0"
parking_lot = "0.12"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
] }
