[package]
name = "ppapi-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core PPAPI host implementation — loads and hosts PPAPI plugins"

[features]
default = ["fs-os", "audio-cpal"]
## Use the real OS filesystem for Flash file storage (works on all platforms).
fs-os = []
## Use an in-memory filesystem — data is not persisted to disk.
fs-memory = []
## Use a stub filesystem — all file operations return errors.
fs-stub = []
## Use cpal for native OS audio output (desktop players).
## Disable this when audio is provided externally (e.g. browser Web Audio API).
audio-cpal = ["dep:cpal"]
## Use arboard for cross-platform clipboard access (desktop players).
clipboard-arboard = ["dep:arboard"]

[dependencies]
ppapi-sys = { workspace = true }
player-ui-traits = { path = "../player-ui-traits" }
tracing = { workspace = true }
libloading = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
rustls = "0.23"
webpki-roots = "1.0.6"
cpal = { version = "0.17.3", optional = true }
arboard = { version = "3", optional = true }
ab_glyph = "0.2.32"
getrandom = "0.4.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
getrandom = "0.4.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
