[package]
name = "ppapi-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core PPAPI host implementation - loads and hosts PPAPI plugins"

[features]
default = ["fs-os", "audio-cpal"]
## Use the real OS filesystem for Flash file storage (works on all platforms).
fs-os = []
## Use an in-memory filesystem - data is not persisted to disk.
fs-memory = []
## Use a stub filesystem - all file operations return errors.
fs-stub = []
## Use cpal for native OS audio output (desktop players).
## Disable this when audio is provided externally (e.g. browser Web Audio API).
audio-cpal = ["dep:cpal"]
## Use arboard for cross-platform clipboard access (desktop players).
clipboard-arboard = ["dep:arboard"]
## Use reqwest for HTTP/HTTPS URL loading (adds native networking).
url-reqwest = ["dep:reqwest"]

[dependencies]
ppapi-sys = { workspace = true }
player-ui-traits = { path = "../player-ui-traits" }
tracing = { workspace = true }
libloading = "0.9"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
rustls = "0.23"
webpki-roots = "1.0.6"
cpal = { git = "https://github.com/RustAudio/cpal", optional = true }
arboard = { version = "3", optional = true }
ab_glyph = "0.2.32"
fontdb = "0.23"
ttf-parser = "0.25"
rand = { version = "0.10.0", features = ["sys_rng"] }
reqwest = { workspace = true, optional = true }
glutin = "0.32"
glow = "0.17"
raw-window-handle = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
wayland-client = { version = "0.31", default-features = false, features = ["system", "dlopen"] }
wayland-backend = { version = "0.3", default-features = false, features = ["client_system", "rwh_06", "dlopen"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
