[package]
name = "ppapi-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core PPAPI host implementation - loads and hosts PPAPI plugins"

[features]
default = ["fs-os"]
## Use the real OS filesystem for Flash file storage (works on all platforms).
fs-os = []
## Use an in-memory filesystem - data is not persisted to disk.
fs-memory = []
## Use a stub filesystem - all file operations return errors.
fs-stub = []
## Use arboard for cross-platform clipboard access (desktop players).
clipboard-arboard = ["dep:arboard"]
## Enable hardware-accelerated OpenGL ES 2.0 via glow/glutin (Stage3D).
gl-glow = ["dep:gl-glow", "dep:glow"]

[dependencies]
ppapi-sys = { workspace = true }
player-ui-traits = { path = "../player-ui-traits" }
tracing = { workspace = true }
serde_json = "1"
libloading = "0.9"
parking_lot = "0.12"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
arboard = { version = "3", optional = true }
gl-glow = { workspace = true, optional = true }
glow = { version = "0.17", optional = true }
ab_glyph = "0.2.32"
fontdb = "0.23"
ttf-parser = "0.25"
rand = { version = "0.10.0", features = ["sys_rng"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
